# path_planning

./: index.html  package-lock.json  package.json  vite.config.ts
docs/: index.html
docs/assets/: index-4rRsubKJ.js  index-B4nSEzQR.js  index-CENz1AXx.js  index-CWqTlxtW.js  index-CzkgyYah.js  index-D6xcn0BZ.css  index-Dp0m7QNI.css  index-fP3EUoDx.js  pathfinding.worker-CHCBy3TF.js  pathfinding_wasm_bg-BaqswDVV.wasm  pathfinding_wasm_bg-CdVJ-fB-.wasm  pathfinding_wasm_bg-XgvOlAn1.wasm
src/: App.tsx  vite-env.d.ts
src/components/: AlgorithmSelector.tsx  CitySearch.tsx  ColorPicker.tsx  ControlPanel.tsx  Legend.tsx
src/core/: graph-serializer.ts  graph.ts  types.ts
src/core/pathfinding/: astar.ts  base.ts  bfs.ts  bidirectional.ts  dfs.ts  dijkstra.ts  greedy.ts  index.ts  instant-worker.ts  wasm-loader.ts  wasm-wrapper.ts
src/hooks/: useGraph.ts  useMapInteraction.ts  usePathfinding.ts
src/renderer/: MapRenderer.ts
src/services/: nominatim.ts  overpass.ts
src/styles/: index.css
src/workers/: pathfinding.worker.ts
wasm/: Cargo.toml
wasm/src/: graph.rs  heuristic.rs  lib.rs  priority_queue.rs  types.rs
wasm/src/algorithms/: astar.rs  bfs.rs  bidirectional.rs  dfs.rs  dijkstra.rs  greedy.rs  mod.rs
